tables created done

--- a/HCLSProjectSol/HCLSProject/appsettings.json
+++ b/HCLSProjectSol/HCLSProject/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    "ConStrLocal": "server=AKHIL\\SQLEXPRESS;Uid=sa;password=123;database=HCLSDB;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true"
+   // "ConStrLocal": "server=xxxxx;uid=sa;password=123;database=HCLSDB;Trusted_Connection=SSPI;Encrypt=false;TrustServrCertificate=true"
+   // "ConStrLocal": "server=yyyyy;uid=sa;password=123;database=HCLSDB;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
